--- a/thesis/implementation/events.tex
+++ b/thesis/implementation/events.tex
@@ -1,1 +1,14 @@
- 
+\subsection{Zdarzenia myszy}
+\input{implementation/events/mouse.tex}
+
+\subsection{Zdarzenia klawiatury}
+\input{implementation/events/keyboard.tex}
+
+\subsection{Zmiana rozmiaru okna}
+\input{implementation/events/resize.tex}
+
+\subsection{Aktywacja okna}
+\input{implementation/events/activate.tex}
+
+\subsection{Zamknięcie okna}
+\input{implementation/events/close.tex}
