--- a/thesis/implementation/events/activate.tex
+++ b/thesis/implementation/events/activate.tex
@@ -1,8 +1,6 @@
 \begin{lstlisting}[language=JavaScript,numbers=none]
 {
-  "command": "resize",
+  "command": "activate",
   "id": 123456,   // Identyfikator obiektu, ktorego dotyczy zdarzenie
-  "w": 100,       // Nowa szerokosc
-  "h": 200        // Nowa wysokosc 
 }
 \end{lstlisting} 
