--- a/thesis/implementation/events/mouse.tex
+++ b/thesis/implementation/events/mouse.tex
@@ -1,1 +1,79 @@
- 
+\subsubsection{Ruch myszy}
+\begin{lstlisting}[language=JavaScript,numbers=none]
+{
+  "command": "mouse",
+  "type": "move",
+  "id": 123456,  // Identyfikator obiektu, ktorego dotyczy zdarzenie
+  "x": 0.0,
+  "y": 0.0,
+  "ox": 0.0,
+  "oy": 0.0,
+  "btn": 0x0,    // 0x00000000 Qt::NoButton
+                 // 0x00000001 Qt::LeftButton
+                 // 0x00000002 Qt::RightButton
+                 // 0x00000004 Qt::MiddleButton
+                 // 0x00000008 Qt::XButton1
+                 // 0x00000010 Qt::XButton2
+  "modifiers": 0x0  // 0x00000000 Qt::NoModifier
+                    // 0x02000000 Qt::ShiftModifier
+                    // 0x04000000 Qt::ControlModifier
+                    // 0x08000000 Qt::AltModifier
+                    // 0x10000000 Qt::MetaModifier
+                    // 0x20000000 Qt::KeypadModifier
+                    // 0x40000000 Qt::GroupSwitchModifier
+}
+\end{lstlisting}
+
+\subsubsection{Wciśnięcie przycisku myszy}
+\begin{lstlisting}[language=JavaScript,numbers=none]
+{
+  "command": "mouse",
+  "type": "press",
+  "id": 123456,
+  "x": 0.0,
+  "y": 0.0,
+  "btn": 0x00000001,       // Qt::LeftButton
+  "modifiers": 0x00000000  //  Qt::NoModifier
+}
+\end{lstlisting}
+
+\subsubsection{Zwolnienie przycisku myszy}
+\begin{lstlisting}[language=JavaScript,numbers=none]
+{
+  "command": "mouse",
+  "type": "release",
+  "id": 123456,
+  "x": 0.0,
+  "y": 0.0,
+  "btn": 0x00000001,       // Qt::LeftButton
+  "modifiers": 0x02000000  //  Qt::ShiftModifier
+}
+\end{lstlisting}
+
+\subsubsection{Podwójne kliknięcie}
+\begin{lstlisting}[language=JavaScript,numbers=none]
+{
+  "command": "mouse",
+  "type": "dbclick",
+  "id": 123456,
+  "x": 0.0,
+  "y": 0.0,
+  "btn": 0x00000002,       // Qt::RightButton
+  "modifiers": 0x00000000  //  Qt::NoModifier
+}
+\end{lstlisting}
+
+\subsubsection{Zmiana położenia kółka myszy}
+\begin{lstlisting}[language=JavaScript,numbers=none]
+{
+  "command": "wheel",
+  "id": 123456,
+  "x": 0.0,
+  "y": 0.0,
+  "btn": 0x00000002,       // Qt::RightButton
+  "modifiers": 0x00000000  //  Qt::NoModifier
+  "delta": 120,        // Zmiana polozenia
+  "orientation": 0x    // 0x1 Qt::Horizontal
+                       // 0x2 Qt::Vertical
+}
+\end{lstlisting} 
