Events: close/resize/activate -> move to new events dispatcher

--- a/thesis/implementation/events/activate.tex
+++ b/thesis/implementation/events/activate.tex
@@ -1,6 +1,6 @@
 \begin{lstlisting}[language=JavaScript,numbers=none]
 {
   "command": "activate",
-  "id": 123456,   // Identyfikator obiektu, ktorego dotyczy zdarzenie
+  "id": 123456   // Identyfikator obiektu, ktorego dotyczy zdarzenie
 }
 \end{lstlisting} 
