--- a/thesis/implementation/events/close.tex
+++ b/thesis/implementation/events/close.tex
@@ -1,6 +1,6 @@
 \begin{lstlisting}[language=JavaScript,numbers=none]
 {
   "command": "close",
-  "id": 123456,   // Identyfikator obiektu, ktorego dotyczy zdarzenie
+  "id": 123456   // Identyfikator obiektu, ktorego dotyczy zdarzenie
 }
 \end{lstlisting} 
