--- a/thesis/implementation/render.tex
+++ b/thesis/implementation/render.tex
@@ -1,4 +1,9 @@
-\bf{TODO: OPIS KLASY WebRenderer ORAZ POJEDYŃCZY CYKL RENDEROWANIA.}
+TODO
+\begin{itemize}
+\item{OPIS KLASY WebRenderer}
+\item{POJEDYŃCZY CYKL RENDEROWANIA.}
+\item Opis wykorzystania danych pod każdą sekcją!
+\end{itemize}
 
 Aby umożliwić renderowanie elementów po stronie klienta należało utworzyć wspólny format danych bazując na wejściu ze strony biblioteki Qt oraz potrzebnych danych wyjściowych dla obiektu Canvas w języku HTML5. 
 
