--- a/thesis/theory/qt.tex
+++ b/thesis/theory/qt.tex
@@ -1,3 +1,4 @@
+// TODO: Ogólnie o Qt
 
 W tym podrozdziale zostaną przedstawione mechanizmy biblioteki Qt wykorzystane przy tworzeniu projektu, o którym stanowi niniejsza praca. 
 
@@ -23,6 +24,8 @@ Klasa \emph{QPaintDevice} stanowi abstrakcję dla dwuwymiarowej przestrzeni na k
 
 Klasa \emph{QPaintEngine} udostępnia interfejs, za pomocą którego obiekty klasy \emph{QPainter} będą mogły wykonywać operacje rysowania na różnego rodzaju urządzeniach wyjściowych. Klasa \emph{QPaintEngine} jest używana wewnątrz klas \emph{QPainter} oraz \emph{QPaintDevice} i jest ukryta przed aplikacjiami dopóki programista nie zechce stworzyć obsługi dla nowego rodzaju urządzenia wyjściowego. W niniejszej pracy taki właśnie scenariusz został wykorzystany.
  
+// TODO: Obrazek w formie wektorowej
+
 \begin{figure}[!h]
   \centering
   \includegraphics[width=\textwidth,height=!]{img/paintsystem-core.png}
