--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -78,6 +78,9 @@ W rodziale tym przedstawione zostaną najważniejsze informacje dotyczące techn
 \section{Opis biblioteki Qt}
 \input{theory/qt.tex}
 
+\section{GTK Broadway}
+\input{theory/gtk.tex}
+
 \chapter{Określenie problemu i proponowane rozwiązanie}
 \input{problem_definition/problem_definition.tex}
 \input{problem_definition/communication.tex}
@@ -109,7 +112,6 @@ W rodziale tym przedstawione zostaną najważniejsze informacje dotyczące techn
 
 \section{Testy w środowisku lokalnym}
 \input{tests/local.tex}
-Wszystko spoko.
 
 \section{Testy w sieci Internet}
 \input{tests/internet.tex}
