--- a/thesis/problem_definition/problem_definition.tex
+++ b/thesis/problem_definition/problem_definition.tex
@@ -1,9 +1,14 @@
+// TODO: Wymagania (ogólne)
+// TODO: Przypadki użycia
+// TODO: Zachowanie systemu / software'u
+// TODO: Struktura systemu / software'u
+
 Przedmiotem pracy jest stworzenie prototypowego serwera hostującego desktopowe aplikacjie oparte o biblioteki Qt oraz KDE. Na żądanie klienta serwer uruchamia wybraną aplikację oraz wstrzykuje kod odpowiedzialny za komunikację klienta z procesem aplikacji i przesyłanie klientowi danych dotyczących wyglądu graficznego interfejsu aplikacji. 
 
 Postawione zadanie w głównej mierze polega na rozwiązaniu trzech podstawowych problemów:
 \begin{enumerate}
-  \item Komunikacja między klientem a serwerem
-  \item Komunikacja między klientem a aplikacją
-  \item Uzyskanie informacji o wyglądzie elementów graficznego interfejsu aplikacji
-  \item Symulacja interakcji użytkownika z interfejsem aplikacji
+  \item komunikacja między klientem a serwerem,
+  \item komunikacja między klientem a aplikacją,
+  \item uzyskanie informacji o wyglądzie elementów graficznego interfejsu aplikacji,
+  \item symulacja interakcji użytkownika z interfejsem aplikacji.
 \end{enumerate}
