--- a/thesis/implementation/client_details.tex
+++ b/thesis/implementation/client_details.tex
@@ -1,10 +1,10 @@
 \subsection{Biblioteki pomocniczne}
 Podczas pracy z projektem zostały wykorzystane popularne biblioteki ułatwiające podstawowe zadania. Wszystkie z nich są darmowe nawet w wykorzystaniu komercyjnym oraz całkowicie otwarte.
 \begin{enumerate}
-  \item jQuery - biblioteka ułatwijąca operacje na elementach DOM
-  \item jQuery-UI - plugin do biblioteki jQuery umożliwiający tworzenie zaawansowanych wizualnych elementów, takich jak okna dialogowe, elementy rozszerzalne (ang. resizable), elementy przesuwalne (ang. draggable).
-  \item jQuery-mousewheel - plugin do biblioteki jQuery dodający obsługę kółka myszy
-  \item sylvester.js - biblioteka służąca do zaawansowanych obliczeń na macierzach i wektorach
+  \item jQuery --- biblioteka ułatwijąca operacje na elementach DOM
+  \item jQuery-UI --- plugin do biblioteki jQuery umożliwiający tworzenie zaawansowanych wizualnych elementów, takich jak okna dialogowe, elementy rozszerzalne (ang. resizable), elementy przesuwalne (ang. draggable).
+  \item jQuery-mousewheel --- plugin do biblioteki jQuery dodający obsługę kółka myszy
+  \item sylvester.js --- biblioteka służąca do zaawansowanych obliczeń na macierzach i wektorach
 \end{enumerate}
 
 
