--- a/thesis/theory/qt.tex
+++ b/thesis/theory/qt.tex
@@ -1,4 +1,26 @@
-// TODO: Ogólnie o Qt
+QT jest międzyplatformowym (ang. cross-platform) frameworkiem aplikacyjnym, najczęściej używany w tworzeniu oprogramowania z graficznym interfejsem użytkownika.
+Dodatkowo biblioteka zawiera moduły wspomagające między innymi:
+\begin{itemize}
+\item międzyplatformowe API dostępu do systemu plików,
+\item dostęp do relacyjnych baz danych,
+\item manipulacja XML,
+\item międzyplatformowe zarządzanie wątkami,
+\item międzyplatformowe wsparcie dla sieci.
+\end{itemize}
+
+Aplikacje QT tworzone są w języku C++ rozszerzonym o dodatkowe słowa kluczowe i makra, których obsługą zajmuje się program moc (Meta-Object Compiler). Największym uzupełnieniem wniesionym do języka przez framework jest system sygnałów i slotów.
+
+QT wspiera największe platformy takie jak:
+\begin{itemize}
+\item Windows
+\item Windows CE
+\item Symbian
+\item OS X
+\item X11 (Linux, FreeBSD, Solaris, AIX i inne)
+\item Maemo, MeeGo
+\end{itemize}
+
+Framework w wersji 5, która jest akutalnie w fazie beta, ma być dostępny również na wszystkie popularne platformy mobilne takie jak Android, iOS i Windows 8.
 
 W tym podrozdziale zostaną przedstawione mechanizmy biblioteki Qt wykorzystane przy tworzeniu projektu, o którym stanowi niniejsza praca. 
 
