--- a/thesis/problem_definition/data.tex
+++ b/thesis/problem_definition/data.tex
@@ -2,4 +2,5 @@ Każdy element graficznego interfejsu aplikacji (QWidget) jest renderowany w mom
 
 Proponowane rozwiązanie polega na zaimplementowaniu abstrakcyjnego urządzenia wyjściowego reprezentującego przeglądarkę WWW po stronie klienta (patrz podrozdział \ref{system_rysowania}). Odpowiednio implementując klasy \emph{QPaintEngine} oraz \emph{QPaintDevice} możliwe staje się uzyskanie szczegółowych informacji dotyczących wygądu widgetów co z kolei umozliwia stworzenie \bf{innowacyjnego} formatu przesyłanych danych. Zamiast przesyłać bitmapy z wyrenderowanym elementem można wysłać informację o kolorach, punktach, liniach i innych podstawowych elementach, które zostaną narysowane na urządzeniu docelowym jakim po stronie klienta jest przeglądarka WWW z obsługą elementów \emph{canvas}.
 
-\\ TODO: Komentarz "Co to znaczy innowacyjnego?"
+
+// TODO Komentarz Co to znaczy innowacyjnego?
