--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -86,10 +86,14 @@ W rodziale tym przedstawione zostaną najważniejsze informacje dotyczące techn
 \input{problem_definition/communication.tex}
 
 \section{Uzyskanie informacji o wyglądzie elementów graficznego interfejsu aplikacji}
+
 \input{problem_definition/data.tex}
 
 \section{Symulacja interakcji użytkownika z interfejsem aplikacji}
 \input{problem_definition/simulation.tex}
+
+\section{Zabezpieczenie aplikacji}
+\input{problem_definition/acl.tex}
 
 \chapter{Implementacja}
 \section{Renderowanie}
