--- a/thesis/implementation/client_details.tex
+++ b/thesis/implementation/client_details.tex
@@ -11,7 +11,7 @@ Podczas pracy z projektem zostały wykorzystane popularne biblioteki ułatwiają
 \subsection{Połączenie}
 Klient po załadowaniu początkowej strony dokonuje połączenia WebSocket z serwerem na port podany na stronie. Następnie nasłuchuje na informacje od serwera i na każdą z nich reaguje. Komunikaty w formacie JSON w drugą stronę wysyłane są po zajściu zdarzeń po stronie klienta, np. ruchu myszą. Dokładny opis zdarzeń znajduję się w sekcji TODO - link do dodatku/sekcji
 
-\subsection{Window manager (ang. zarządca okien) na szybkości}
+\subsection{Window manager (ang. zarządca okien)}
 Typowe programy komputerowe składaja się z wielu okien. Sposób implementacji pseudookien i zarządcy w projekcie był możliwy na dwa sposoby.
 Pierwszym wariantem jest zastosowanie osobnych okien przeglądarki (tzw. popupów), które odpowiadałyby rzeczywistym oknom przeglądarki.
 Drugą opcją jest stworzenie minimalistycznego managera okien w języku Javascript.
