--- a/thesis/summary/summary.tex
+++ b/thesis/summary/summary.tex
@@ -1,9 +1,9 @@
-Temat pracy inżynierskiej został w pełni zrealizowany. Zostały stworzony serwer oraz klient. Aplikacja serwera bezpośrednio udostępnia stronę WWW i pozwala na pracę wielu klientów naraz. Przy pomocy wstrzykiwania kodu oraz haków QT użycie aplikacji nie wymaga rekompilacji ani frameworka, ani używanych aplikacji.
+Temat pracy inżynierskiej został w pełni zrealizowany. Zostały stworzony serwer oraz klient. Aplikacja serwera bezpośrednio udostępnia stronę WWW i pozwala na pracę wielu klientów naraz. Przy pomocy wstrzykiwania kodu oraz haków Qt użycie aplikacji nie wymaga rekompilacji ani frameworka, ani używanych aplikacji.
 Aplikacja kliencka w przeglądarce pokrywa bardzo duży podzbiór funkcjonalności modułu UI frameworka QT. Wszelkie braki wynikają z niedoskonałości rozwijającego się standardu HTML5.
 
 Projekt można rozwijać w następujących kierunkach:
 \begin{itemize}
-  \item dostosowanie do wersji 5 frameworka QT
+  \item dostosowanie do wersji 5 frameworka Qt
   \item rozwinięcie możliwości aplikacji klienckiej przy użyciu funkcji HTML5, które będą dostępne w przyszłości
   \item rozwinięcie zabezpieczeń --- pełne kontrolowanie dostępu do aplikacji przy użyciu logowania
   \item ułatwienie instalacji
