--- a/thesis/summary/summary.tex
+++ b/thesis/summary/summary.tex
@@ -1,11 +1,16 @@
-Temat pracy inżynierskiej został w pełni zrealizowany. Zostały stworzony serwer oraz klient. Aplikacja serwera bezpośrednio udostępnia stronę WWW i pozwala na pracę wielu klientów naraz. Przy pomocy wstrzykiwania kodu oraz haków Qt użycie aplikacji nie wymaga rekompilacji ani frameworka, ani używanych aplikacji.
-Aplikacja kliencka w przeglądarce pokrywa bardzo duży podzbiór funkcjonalności modułu UI frameworka QT. Wszelkie braki wynikają z niedoskonałości rozwijającego się standardu HTML5.
+Temat pracy inżynierskiej został w pełni zrealizowany, a jej wynikiem jest prototyp serwera oraz webowej aplikacji klienckiej. 
 
-Projekt można rozwijać w następujących kierunkach:
+Program serwera udostępnia kod strony WWW, który uruchamiany jest przez przeglądarkę. Uruchamia on również aplikację graficzną opartą o framework Qt oraz odpowiada za utworzenie połączenia między klientem a procesem aplikacji. Możliwa jest także obsługa wielu połączeń równocześnie. 
+Przy pomocy techniki wstrzykiwania kodu bibliotek linkowanych dynamicznie \emph{(ang. DLL injection)} oraz wewnętrznych mechanizmów biblioteki \emph{Qt}, użycie aplikacji nie wymaga ponownej kompilacji, zarówno samego frameworka \emph{Qt}, jak i uruchamianych aplikacji użytkowych.
+
+Aplikacja kliencka stworzona w postaci dynamicznej strony WWW pokrywa bardzo duży podzbiór funkcjonalności modułu graficznych interfejsów biblioteki \emph{Qt}. Wszelkie braki wynikają z niedoskonałości standardu HTML5, który wciąż jest mocno rozwijany.
+
+Projekt będzie kontynuowany w następujących kierunkach:
 \begin{itemize}
-  \item dostosowanie do wersji 5 frameworka Qt
-  \item rozwinięcie możliwości aplikacji klienckiej przy użyciu funkcji HTML5, które będą dostępne w przyszłości
-  \item rozwinięcie zabezpieczeń --- pełne kontrolowanie dostępu do aplikacji przy użyciu logowania
-  \item ułatwienie instalacji
-  \item stworzenie panelu administracyjnego oraz nowego widoku głównego aplikacji
+  \item umożliwienie współpracy z aplikacjami opartymi o najnowszą bibliotekę \emph{Qt} w wersji \emph{5.0},
+  \item rozwinięcie zabezpieczeń --- autentykacja i autoryzacja klientów,
+  \item stworzenie panelu administracyjnego serwera oraz nowego widoku głównego aplikacji,
+  \item automatyzacja procesu instalacji,
+  \item utworzenie wersji serwera dla systemów \emph{Windows} oraz \emph{Mac OS},
+  \item rozwinięcie możliwości aplikacji klienckiej przy wykorzystaniu elementów technologii \emph{HTML5}, które będą dostępne w przyszłości.
 \end{itemize}
